pushing latest code
pushing latest code

--- a/Project code/newproj/demosky/templates/registration/password_reset_complete.html
+++ b/Project code/newproj/demosky/templates/registration/password_reset_complete.html
@@ -9,7 +9,7 @@
 {% block body_block %}
 <div class="container">
 	<h1> Reset your password </h1>
-	<p class="text-big">Your password has been set. You may go ahead and <a href="{% url 'signin' %}">sign in</a> now.</p>
+	<p class="text-big">Your password has been set. You may go ahead and <a href="/demosky/login">sign in</a> now.</p>
 
 </div>
 {% endblock %}
