--- a/Project code/newproj/demosky/templates/registration/password_reset_confirm.html
+++ b/Project code/newproj/demosky/templates/registration/password_reset_confirm.html
@@ -7,13 +7,13 @@
 
 {% block body_block %}
 <div class="container">
-	<h1 class="text-big"> Reset your password </h1>
+	<h1 class="headers"> Reset your password </h1>
 
 	<h3 class="text-big">Change password</h3>
     <form method="post" class="text-big">
       {% csrf_token %}
       {{ form.as_p }}
-      <button type="submit">Change password</button>
+      <button class="btn btn-default" type="submit">Change password</button>
     </form>
 
 </div>
