--- a/Project code/newproj/demosky/templates/registration/password_reset_form.html
+++ b/Project code/newproj/demosky/templates/registration/password_reset_form.html
@@ -7,17 +7,19 @@
 
 {% block body_block %}
 <div class="container">
-	<h1 class="text-big"> Reset your password </h1>
-
+	<h1 class="headers"> Reset your password </h1>
+  
 <form method="post" class="text-big">
+
+
 	{% csrf_token %}
 	  <div class="text-big">
 	  
             {{ form.email.errors }}
-            <label for="id_email">{% trans 'Email address:' %}</label>
-            {{ form.email }}
+            {{ form.as_p }}
+           
         </div>
-        <input type="submit" value="{% trans 'Reset my password' %}" />
+        <button class="btn btn-default" type="submit">Reset</button>
 </form>
 
 </div>
