--- a/Project code/newproj/static/DarkSky-Dev/css/base.css
+++ b/Project code/newproj/static/DarkSky-Dev/css/base.css
@@ -2,14 +2,47 @@ body{
 	background: url('/static/DarkSky-Dev/imgs/stars.gif');
 }
 
+
+
 .text-big {
 	color: yellow;
-	font-size: 250%;
+	font-size: 20px;
+
 }
 
+.helptext{
+  visibility: hidden;
+}
+
+
 .loginbox {
-	color: yellow;
+	color: black;
 	margin: auto;
 	padding-top: 150px;
 	font-size: 20px;
+}
+
+.text-big input[type="text"] {
+    color:black;
+}
+
+.text-big input[type="password"] {
+    color:black;
+}
+
+.text-big input[type="password"] {
+    color:black;
+}
+
+.text-big input[type="submit"] {
+    color:black;
+}
+
+.text-big input[type="email"] {
+    color:black;
+}
+
+.headers {
+	color : yellow;
+	font-size: 30px;
 }
