--- a/Project code/newproj/demosky/templates/demosky/profile.html
+++ b/Project code/newproj/demosky/templates/demosky/profile.html
@@ -1,13 +1,29 @@
-{% extends 'demosky/base.html' %}
+{{% extends 'demosky/base.html' %}
 
-{% block title_block %} Register {% endblock %}
+{% block title_block %} PROFILE {% endblock %}
+<br>
 {% block head_block %}
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 {% endblock %}
 
 {% block body_block %}
-<div class="container">
-	<h1 class="text-big"> WELCOME {{user}}</h1>
-
+<div class ='container'>
+    <h1>Profile</h1>
+    <p>Username :{{user}}</p>
+    <p>Name : {{user.first_name}}</p>
+    <p>Email : {{user.email}}</p>
+    <p>Bio : {{user.userprofile.bio}}</p>
+    <p>Address :{{user.userprofile.location}}</p>
+    <p>Image:
+        {% if user.userprofile.photo %}
+         <img src="{{user.userprofile.photo.url}}" width="240">
+        {% endif %}</p>
+<a class="btn btn-default" type="button" id="Profile" href= "/demosky/edit_profile">Edit profile</a>
 </div>
-{% endblock %}
+
+
+{% endblock%}
+
+
+
+
