--- a/Project code/newproj/demosky/templates/demosky/reg_form.html
+++ b/Project code/newproj/demosky/templates/demosky/reg_form.html
@@ -6,8 +6,24 @@
 {% endblock %}
 
 {% block body_block %}
+
+	{% if form.errors %}
+	    {% for field in form %}
+	        {% for error in field.errors %}
+	            <div class="alert alert-danger">
+	                <strong>{{ error|escape }}</strong>
+	            </div>
+	        {% endfor %}
+	    {% endfor %}
+	    {% for error in form.non_field_errors %}
+	        <div class="alert alert-danger">
+	            <strong>{{ error|escape }}</strong>
+	        </div>
+	    {% endfor %}
+	{% endif %}
+
 <div class="container">
-	<h1 class="text-big"> Please enter your details</h1>
+	<h1 class="headers"> Please enter your details</h1>
 	<form method="post" class="text-big">
 	{% csrf_token %}
 	{{form.as_p}}
