--- a/Project code/newproj/static/DarkSky-Dev/css/base.css
+++ b/Project code/newproj/static/DarkSky-Dev/css/base.css
@@ -1,5 +1,5 @@
 body{
-	background: url('/static/DarkSky-Dev/imgs/stars.gif');
+	background: url('/static/DarkSky-Dev/imgs/stars1.gif');
 }
 
 
@@ -43,6 +43,74 @@ body{
 }
 
 .headers {
-	color : yellow;
 	font-size: 30px;
 }
+
+/* extra css for container */
+
+.noBorder{
+	border-bottom: none;
+}
+
+table {
+	margin-top: 30px;
+	overflow: auto;
+	width: 1000px;
+	align-self: auto;
+	margin: auto
+
+}
+
+th, td {
+    padding: 10px;
+	text-align: left;
+	width: 200px;
+}
+
+
+
+#currentDetails {
+  position: relative;
+  text-align: center;
+  left: -10px;
+  white-space: nowrap;
+  font-size: 14px;
+  margin: 0 auto;
+  max-width: 750px;
+}
+
+#currentDetails > div {
+  display: inline-block;
+  /*width: 16.6%;*/
+  text-align: center;
+  margin: 0 10px;g
+}
+
+#currentDetails > div.current_details_break {
+  display: none;
+}
+
+#currentDetails .label {
+  display: inline-block;
+  text-align: right;
+  font-weight: 500;
+  margin: 0 4px;
+}
+
+#currentDetails .val {
+  display: inline-block;
+  text-align: left;
+  font-weight: 300;
+}
+
+#currentDetails .uv_index .num {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  padding: 2px 5px;
+}
+#currentDetails .uv_index.uv0 .num {background-color: rgba(64, 191, 64, 0.6)}
+#currentDetails .uv_index.uv1 .num {background-color: rgba(255, 240, 0, 0.6)}
+#currentDetails .uv_index.uv2 .num {background-color: rgba(255, 127, 0, 0.5)}
+#currentDetails .uv_index.uv3 .num {background-color: rgba(255, 0, 0, 0.6)}
+#currentDetails .uv_index.uv4 .num {background-color: rgba(166, 89, 255, 0.75)}
