--- a/Project code/newproj/demosky/templates/demosky/verify-user.html
+++ b/Project code/newproj/demosky/templates/demosky/verify-user.html
@@ -16,8 +16,7 @@
 	{% csrf_token %}
 
 	<label>Enter Token</label>
-          <input type = "
-          " id = "token" name="token"/>
+          <input type = "text" id = "token" name="token"/>
 
     <button class="btn btn-default" type="submit">Submit</button>
 	</form>	
