--- a/Project code/newproj/demosky/templates/demosky/base.html
+++ b/Project code/newproj/demosky/templates/demosky/base.html
@@ -61,6 +61,8 @@
 
 
 <body>
+  
+
 
 <nav class="navbar navbar-inverse" >
   <div class="container-fluid" >
@@ -106,6 +108,24 @@
   <p align="center" class="text-big">This is the basic Layout !</p>
   {% endblock %}
 </div>
+
+
+
+<div id="footer">
+    <div id="footcontainer">
+        <p style="color:white" align="center">
+            Created by the NightsWatch Team 
+        </p>
+        <p align="center">
+            <a target="_blank" href="https://darksky.net/">Dark Sky</a>
+            &nbsp;|&nbsp;<a target="_blank" href="https://www.fs.usda.gov/hoosier/">Hoosier National Forest</a>
+            
+        </p>
+    </div>
+</div>
+
+
+
 
 </body>
 </html>
