--- a/Project code/newproj/demosky/templates/demosky/manage-user.html
+++ b/Project code/newproj/demosky/templates/demosky/manage-user.html
@@ -11,16 +11,18 @@
 <h1 class="headers">Change roles to Admin</h1>
  <form method="post" class="text-big">
  	{% csrf_token %}
-	<ul>
-	  {% for user in users %}
-	    <li>
-	      <p style="color:blue">{{ user.username }} 
-	      <input id="{{user.id}}" name="userlist" type="checkbox" value="{{user.id}}" /> 
-	      </p>
-	    </li>
+	 <table border="1" style="overflow:auto;width:auto" >
+			<tr style="background-color:#BBBBBB">
+					<td style="width:800px">Username</td>
+					<td>Admin</td>
+			</tr>
+		{% for user in users %}
+		  <tr>
+	      <td><p style="color:blue">{{ user.username }} </p></td>
+	      <td><input id="{{user.id}}" name="userlist" type="checkbox" value="{{user.id}}" /> </td>
+	    </tr>
 	  {% endfor %}
-	</ul>
-
+		</table>
  	<button class="btn btn-default" type="submit"> Submit</button>
  </form>	
 	
