--- a/Project code/newproj/demosky/templates/demosky/verify-user.html
+++ b/Project code/newproj/demosky/templates/demosky/verify-user.html
@@ -6,10 +6,10 @@
 {% endblock %}
 
 {% block body_block %}
-<div class="container">
+<div class="container" style="width:100%">
 	
 
-<div class="container loginbox" align="center" class="text-big">
+<div class="container loginbox" align="center" class="text-big" >
 	
 	<form method="post" class="text-big" id="tokenform" name ="tokenform">
 	{{error}}
