--- a/Project code/newproj/demosky/templates/demosky/home.html
+++ b/Project code/newproj/demosky/templates/demosky/home.html
@@ -5,7 +5,7 @@
 
  {% block body_block %}
 
-<div align="center" ">
+<div align="center" >
       <input type="text" id="search-criteria" value="" />
       <input type="button" id="search" value="search" onclick="searchSensor();">
 </div>
@@ -138,9 +138,9 @@ function myMap(searchObj) {
 var x=sensor();
 
 
-    var html = "<table border='5px' style='width:1000px' align='center'>";
+    var html = "<table border='5px' style='width:1000px' align='center' background=''>";
 
-    html+="<tr class='noBorder'>";
+    html+="<tr class='noBorder'style='background-color:#BBBBBB'>";
     for (var i = 0; i < x.length; i++) {
         html+="<td>Sensor "+x[i][1]+"</td>";
     }
