--- a/Project code/newproj/demosky/templates/demosky/login.html
+++ b/Project code/newproj/demosky/templates/demosky/login.html
@@ -12,7 +12,7 @@
 
 
 
-<div class="container loginbox" align="center" class="text-big">
+<div class="container loginbox" align="center" class="text-big" id="loginbox" style="padding-top:47px">
 
 {% if user.is_authenticated %}
 	
@@ -21,12 +21,39 @@
 {% else %}
    
     <form method="post" class="text-big">
-		{% csrf_token %}
-		{{form.as_p}}
 		
-		<button class="btn btn-default" type="submit" id="loginbtn"> Login</button>
-		<a class="btn btn-default" type="button" id="register" href= "/demosky/register">Register</a>
-		<a href ="/demosky/reset-password" style="color:blue"> Forgot Password?</a>
+		<form class="form-horizontal" method="post">
+				{% csrf_token %}
+				<div class="main-login main-center">
+					<div class="form-group">
+						<label for="username" class="cols-sm-2 control-label">Username</label>
+						<div class="cols-sm-10">
+							<div class="input-group">
+								<span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+								<input type="text" class="form-control" name="username" id="username" required id="id_username" placeholder="Enter your Username"/>
+							</div>
+						</div>
+				</div>
+
+				<div class="form-group">
+					<label for="password" class="cols-sm-2 control-label">Password</label>
+					<div class="cols-sm-10">
+						<div class="input-group">
+							<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+							<input type="password" class="form-control" name="password" id="password" required id="id_password" placeholder="Enter your Password"/>
+						</div>
+					</div>
+				</div>
+				<div class="form-group ">
+					<button class="btn btn-primary btn-lg btn-block login-button" type="submit" id="loginbtn"> Login</button>
+					<a class="btn btn-primary btn-lg btn-block login-button" type="button" id="register" href= "/demosky/register">Register</a>
+					<a href ="/demosky/reset-password" style="color:blue"> Forgot Password?</a>
+				</div>
+				</div>
+			</form>
+
+
+		
 	<!-- 	<a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br>
 		<a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a> -->
 	<!-- 	<a href="{% url 'social:begin' 'twitter' %}">Login with Twitter</a> -->
