--- a/Project code/newproj/demosky/templates/demosky/login.html
+++ b/Project code/newproj/demosky/templates/demosky/login.html
@@ -20,7 +20,7 @@
 
 {% else %}
    
-    <form method="post" class="text-big">
+    <form method="post" class="text-big" action="{% url verify %}">
 		{% csrf_token %}
 		{{form.as_p}}
 		
@@ -31,7 +31,7 @@
 		<a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a> -->
 	<!-- 	<a href="{% url 'social:begin' 'twitter' %}">Login with Twitter</a> -->
 	<br/>
-	<!--
+	
 	<br/> Login via: &nbsp;		
 				<a href="{% url 'social:begin' 'facebook' %}" class="btn btn-facebook">
 			        <i class="fa fa-facebook"></i>
@@ -41,7 +41,7 @@
 			    </a>
 				<a href="{% url 'social:begin' 'github' %}" class="btn btn-github">
 			        <i class="fa fa-github"></i>
-			    </a> -->
+			    </a> 
 		
 
 	</form>
