--- a/Project code/newproj/demosky/templates/demosky/base.html
+++ b/Project code/newproj/demosky/templates/demosky/base.html
@@ -63,7 +63,7 @@
 <body>
   
 
-
+<div class="wrapper">
 <nav class="navbar navbar-inverse" >
   <div class="container-fluid" >
     <div class="navbar-header">
@@ -103,14 +103,14 @@
 
 
   
-<div class="container">
+<div class="container" class="wrapper">
   {% block body_block %}
   <p align="center" class="text-big">This is the basic Layout !</p>
   {% endblock %}
 </div>
 
 
-
+</div>
 <div id="footer">
     <div id="footcontainer">
         <p style="color:white" align="center">
