--- a/Project code/newproj/static/DarkSky-Dev/css/base.css
+++ b/Project code/newproj/static/DarkSky-Dev/css/base.css
@@ -4,7 +4,7 @@ body{
   background-position: top center;
   background-attachment: fixed;
   width: 100%;
-  height: 100%;
+  height: 90%;
   
 }
 
@@ -68,10 +68,26 @@ table {
   margin-bottom: 50px;
 }
 
+/* More footer css */
+
+* {
+  margin: 0;
+}
+
+html{
+  height: 100%;
+}
+
+.wrapper {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+}
+
 
 #footer {
   padding-top: 10px;
-  margin-top: 50px;
+  
   background-color: #1F1F1F;
   color: white;
   position: relative;
