--- a/Project code/demosky/templates/demosky/verify-user.html
+++ b/Project code/demosky/templates/demosky/verify-user.html
@@ -16,7 +16,7 @@
 	{% csrf_token %}
 
 	<label>Enter Token</label>
-          <input type = "text" id = "token" name="token"/>
+          <input type = "number" id = "token" name="token" required="true" />
 
     <button class="btn btn-default" type="submit">Submit</button>
 	</form>	
