Message Board Update

--- a/Project code/demosky/templates/demosky/search.html
+++ b/Project code/demosky/templates/demosky/search.html
@@ -17,6 +17,9 @@
         <div class="time">
             <a class="btn btn-default" type="button" id="Chat" href= "/demosky/chat_box">Chat Room <strong><i class="fa fa-comments" aria-hidden="true"></i></strong></a>
         </div>
+        <div class="time">
+            <a class="btn btn-default" type="button" id="Chat" href= "/demosky/topic_edit">Create or View Topics <strong><i class="fa fa-comments" aria-hidden="true"></i></strong></a>
+        </div>
       </h4>
     </div>
 
@@ -41,6 +44,7 @@
 			</form>
 		</div>
       </div>
+
 
       <div class="panel-body">
        <div class="'text-big" id="usersearch result">
