--- a/Project code/demosky/templates/demosky/messages.html
+++ b/Project code/demosky/templates/demosky/messages.html
@@ -1,11 +1,17 @@
-{% for obj in chat %}
-    {% if obj.user == request.user %}
+                {% for obj in chat %}
 
-<li class="text-right list-group-item"> <b><font color ='green' >{{obj.user}}: &nbsp;</font></b>{{ obj.message }}<br><small>{{obj.created.time}}</small></li>
-    {% else %}
-<li class="text-left list-group-item"><b><font color ='blue'>{{obj.user}}: &nbsp;</font></b>{{ obj.message }}<br><small>{{obj.created.time}}</small></li>
+                        {% if obj.user == request.user %}
+                            <li class="text-right list-group-item"></li>
+                        <li class="text-right list-group-item"><b><font color ='green'>{{ obj.user }}:</font></b> {{ obj.message }}<br><small>{{obj.created.time}}</small></li>
 
-    {% endif %}
-{% empty %}
-    <li class="text-right list-group-item">No messages yet!</li>
-{% endfor %}
+                        {% else %}
+                            <li class="text-left list-group-item"></li>
+                        <li class="text-left list-group-item"><b><font color = 'blue'>{{ obj.user}}:</font></b> {{ obj.message }}<br><small>{{obj.created.time}}</small></li>
+
+                        {% endif %}
+
+
+                    {% empty %}
+                        <li class="text-right list-group-item">No messages yet!</li>
+
+                {% endfor %}
