--- a/Project code/demosky/templates/demosky/login.html
+++ b/Project code/demosky/templates/demosky/login.html
@@ -63,12 +63,8 @@
 				<a href="{% url 'social:begin' 'facebook' %}" class="btn btn-facebook">
 			        <i class="fa fa-facebook"></i>
 			    </a>
-				<a href="{% url 'social:begin' 'twitter' %}" class="btn btn-twitter">
-			        <i class="fa fa-twitter"></i>
-			    </a>
-				<a href="{% url 'social:begin' 'github' %}" class="btn btn-github">
-			        <i class="fa fa-github"></i>
-			    </a> 
+			    <a href="{% url 'social:begin' 'google-oauth2' %}">Login with google</a>
+
 		
 
 	</form>
