--- a/Project code/demosky/templates/demosky/login.html
+++ b/Project code/demosky/templates/demosky/login.html
@@ -59,11 +59,14 @@
 	<!-- 	<a href="{% url 'social:begin' 'twitter' %}">Login with Twitter</a> -->
 	<br/>
 	
-	<br/> Login via: &nbsp;		
+	<br/> Login via: &nbsp;
+                <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn btn-google">
+					<i class="fa fa-google-plus"></i>
+				</a>
 				<a href="{% url 'social:begin' 'facebook' %}" class="btn btn-facebook">
 			        <i class="fa fa-facebook"></i>
 			    </a>
-			    <a href="{% url 'social:begin' 'google-oauth2' %}">Login with google</a>
+
 
 		
 
