--- a/Project code/demosky/templates/demosky/home.html
+++ b/Project code/demosky/templates/demosky/home.html
@@ -351,9 +351,9 @@ function sensor() {
 	
 </script>
 
+<div align = "center">
 
-
-<canvas id="myChart" width="900" height="300"></canvas>
+<canvas id="myChart" width="900" height="300" ></canvas>
 <script type="text/javascript">
 	
 	var data_array = JSON.parse("{{chart_data|escapejs}}");
@@ -442,15 +442,15 @@ function chartupdate(data_array){
 
 </script>
 
+</div>
 
 
 
 
+<div align="center">
 
 
-
-
-<canvas id="myChart1" width="900" height="300"></canvas>
+<canvas id="myChart1" width="900" height="300" ></canvas>
 <script type="text/javascript">
 	
 	var data_array_1 = JSON.parse("{{chart_data_day|escapejs}}");
@@ -544,7 +544,7 @@ function chartupdate_1(data_array_1){
 
 
 
-
+</div>
 
 
 
