--- a/Project code/demosky/templates/demosky/homebasic.html
+++ b/Project code/demosky/templates/demosky/homebasic.html
@@ -8,9 +8,48 @@
      <!--  <input type="text" id="search-criteria" value="" /> -->
 </div>
 
- <h1 align="center" class="headers">Hoosier National Forest</h1>
- <div id="map" style="width:1000px;height:450px;background:yellow; margin: 0 auto 0 auto;"></div>
 
+
+<h1 align="center" class="headers" style="font: bold 50px/50px Georgia, serif;" >Hoosier National Forest</h1>
+ <!-- <div id="map" style="width:1000px;height:450px;background:yellow; margin: 0 auto 0 auto;"></div> -->
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" >
+   
+    <div class="item active">
+      <div id="map" style="height:450px;"></div>
+    </div>
+    <div class="item">
+      <img src="/static/DarkSky-Dev/imgs/sky1.jpg " style="height:450px; width: 100%" >
+    </div>
+    <div class="item">
+      <img src="/static/DarkSky-Dev/imgs/sky.jpg" style="height:450px; width: 100%" >
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
+<!-- 
+ 
+ -->
  <div class="text-big" id="try">
 </div>
 
@@ -102,8 +141,8 @@ function myMap(searchObj) {
 <!-- Bar format by Adarsh -->
 
 <!-- Adding another bar for displaying information-->
-<h2 align="center" margin-top="40px"> Sensor Values</h2>
-<div class= "badatable" id="testtable">
+<h2 align="center" margin-top="40px"></h2>
+<!-- <div class= "badatable" id="testtable"> -->
   
 </div>
 
@@ -112,7 +151,7 @@ function myMap(searchObj) {
 </div>
 
 <p align="center">
-	Please login to make use of core features like bookmarking sensors , discussion boards etc.
+	Please login to make use of core features like bookmarking sensors, discussion boards etc.
 </p>
 <script type="text/javascript">
 
