--- a/Project code/demosky/templates/demosky/manage-sensors.html
+++ b/Project code/demosky/templates/demosky/manage-sensors.html
@@ -3,6 +3,20 @@
 {% block title_block %} Register {% endblock %}
 {% block head_block %}
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<script type="text/javascript">
+		
+	function addSensor(id){
+		var x = document.getElementById("7_x1").value;  
+		var y = document.getElementById(id+"_y1").value;
+		if(x.length< 1 || y.length < 1){
+			alert("Please Fill X and Y coordinates.");
+			return false;
+		}
+		return true;
+	}
+
+	</script>
 {% endblock %}
 
 {% block body_block %}
@@ -12,19 +26,29 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1" class="headers">
         Add Sensors</a>
       </h4>
     </div>
     <div id="collapse1" class="panel-collapse collapse in">
       <div class="panel-body">
       	<div class="text-big" id="addsensor">
-			<form method="post" class="text-big" id="addsensorform" name="addsensorform">
+			<form method="post" class="text-big" id="addsensorform" name="addsensorform" >
 				{% csrf_token %}
-				<label>X-Coordinate: &nbsp</label><input type="number" name="x-coord" id="x-coord" required="true">
-				<label>Y-Coordinate: &nbsp</label><input type="number" name="y-coord" id="y-coord" required="true">
+				<ul id="addlist" name="addlist">
+				{% for sensor in unpromotedsensors %}
+					<li>
+					      <p style="color:blue">Sensor {{ sensor }}&nbsp&nbsp&nbsp  X:&nbsp<input type="number" name="{{sensor}}_x1" 
+					      id="{{sensor}}_x1" >&nbsp Y:&nbsp<input type="number" name="{{sensor}}_y1" 
+					      id="{{sensor}}_y1">
+					      <button type="submit" class="btn btn-default" id="{{sensor}}" onclick="return addSensor({{sensor}})">
+					      Add</button>
+					      </p>
+				    </li>	
+				{% endfor %}
+				</ul>	
 				<input type="hidden" name="action" value="add">
-				<button class="btn btn-default" type="submit"> Submit</button>
+	
 			</form>
 		</div>
       </div>
@@ -33,7 +57,7 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2" class="headers">
         Delete Sensors</a>
       </h4>
     </div>
@@ -51,7 +75,7 @@
 			  {% endfor %}
 			</ul>
 			 <input type="hidden" name="action" value="delete">
-		 	<button class="btn btn-default" type="submit"> Submit</button>
+		 &nbsp;&nbsp;	<button class="btn btn-default" type="submit"> Submit</button>
 	 </form>
 
       </div>
@@ -60,7 +84,7 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3" class="headers">
         Modify Sensors</a>
       </h4>
     </div>
@@ -73,14 +97,14 @@
 			  		{% for sensor in sensors %}
 					    <li>
 					      <p style="color:blue">Sensor {{ sensor.sensor_id }}&nbsp&nbsp&nbsp  X:&nbsp<input type="text" name="{{sensor.sensor_id}}_x" 
-					      id="" value="{{sensor.x_coord}}">&nbsp Y:&nbsp<input type="text" name="{{sensor.sensor_id}}_y" 
-					      id="{{sensor_id}}_y" value="{{sensor.y_coord}}">
+					      id="" value="{{sensor.x_coord}}" style="font-size:16px;">&nbsp Y:&nbsp<input type="text" name="{{sensor.sensor_id}}_y" 
+					      id="{{sensor_id}}_y" value="{{sensor.y_coord}}" style="font-size:16px;">
 					      </p>
 					    </li>
 				  	{% endfor %}
 				</ul>
 				<input type="hidden" name="action" value="mod">
-			 	<button class="btn btn-default" type="submit"> Submit</button>
+			 	&nbsp; &nbsp;<button class="btn btn-default" type="submit"> Submit</button>
 			</form>
 		</div>
       </div>
